remoção do texto de teste

--- a/inicio.html
+++ b/inicio.html
@@ -22,7 +22,7 @@
     </nav>
     <br>
     <main>
-        <p><a href="#">Conheça a tecnologia patenteável dos MEGGs para a construção de paredes, pilares e vigas de alvenaria. [Link]</a></p>
+        <p><a href="#">Conheça a tecnologia patenteável dos MEGGs para a construção de paredes, pilares e vigas de alvenaria.</a></p>
         <p>A wOrmhOle introduz o conceito da construção modular em nível dos menores elementos, denominados MEGGs, aplicável aos blocos, portas, janelas, caixas e qualquer outro objeto a ser embutido na parede.</p>
         <p>Devido ao processo de grauteamento limpo, introduz o conceito de blocos com acabamento final da parede a ser montada, incluindo pintura, revestimentos e qualquer outro tipo de acabamento desejado.</p>
         <p>Devido ao bloco estrutural ser de resistência maior ou igual a 14 MPa, devido ao impermeabilizante incorporado ao concreto, devido à opção de fornecimento e uso na cor natural, devido ao processo industrializado de aplicação de pintura, revestimentos, etc., pode introduzir o conceito de garantia vitalícia da parede montada para determinadas condições.</p>
@@ -34,26 +34,6 @@
             <li>Injeção de material aderente somente nas juntas de aderência da parede pré-montada com os MEGGs.</li>
         </ul>
         <p>Resultado: Com exceção do piso e da laje, o pavimento fica finalizado, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc. </p>
-
-
-
-
-        <h1 class="teste">Texto de TESTE</h1>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-
-
-
-
-
     </main>
     <br>
     <footer>
