--- a/solucao.html
+++ b/solucao.html
@@ -25,31 +25,11 @@
         <p>A wOrmhOle oferece a solução do problema da montagem trabalhosa das paredes, pilares, vigas e esquadrias, antecipando na fábrica todo o trabalho que tradicionalmente é executado na obra, tal como:</p>
         <ol>
             <li>Assentamento tradicional dos blocos com argamassa;</li>
-            <li>Caixarias para vigas e pilares, principalmente os pilares não embutidos na <a href="#">parede; [Link]</a></li>
-            <li><a href="#">Execução de rasgos nos blocos para passagem das armaduras horizontais e verticais; [Link]</a></li>
+            <li>Caixarias para vigas e pilares, principalmente os pilares não embutidos na <a href="#">parede;</a></li>
+            <li><a href="#">Execução de rasgos nos blocos para passagem das armaduras horizontais e verticais;</a></li>
             <li>Processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede; </li>
             <li>Chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes.</li>
         </ol>
-
-
-
-
-        <h1 class="teste">Texto de TESTE</h1>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
-
-
-
-
-
     </main>
     <br>
     <footer>
