Nova versão do site, V2.0

--- a/home.html
+++ b/home.html
@@ -19,19 +19,22 @@
     <nav>
         <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html" class="atual">Home</a>
-        <a href="inicio.html">Inicio</a>
-        <a href="solucao.html">Solução do Problema</a>
-        <a href="valor.html">Valor Agregado</a>
-        <a href="patentes.html">Patentes</a>
+        <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
-    </nav>
+    </nav><!-- 
         <div class="vid">
             <video autoplay loop muted controls>
                 <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
             </video>
-        </div>
+        </div>-->
+    <main>
+        <video autoplay loop muted controls class="vid">
+            <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
+        </video>
+        <h2>O lego da construção modular em nível dos menores elementos.</h2>
+    </main>
 </body>
 </html>
