--- a/parceiros.html
+++ b/parceiros.html
@@ -11,10 +11,7 @@
     <nav>
         <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html">Home</a>
-        <a href="inicio.html">Inicio</a>
-        <a href="solucao.html">Solução do Problema</a>
-        <a href="valor.html">Valor Agregado</a>
-        <a href="patentes.html">Patentes</a>
+        <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html" class="atual">Parceiros & Investidores</a>
@@ -23,10 +20,16 @@
     <br>
     <main>
         <ul>
+            <li>Vídeo pitch</li>
             <li>Pitch deck</li>
             <li>Elevator pitch</li>
             <li>Tweet pitch</li>
-            <li>One pager </li>
+            <li>One pager</li>
+            <li>Contrato de Parceria</li>
+            <li>Contrato de Franquia</li>
+            <li>Contrato de Investidor</li>
+            <li>Contrato de Licenciamento</li>
+
         </ul>
     </main>
     <br>
