--- a/fale.html
+++ b/fale.html
@@ -11,10 +11,7 @@
     <nav>
         <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html">Home</a>
-        <a href="inicio.html">Inicio</a>
-        <a href="solucao.html">Solução do Problema</a>
-        <a href="valor.html">Valor Agregado</a>
-        <a href="patentes.html">Patentes</a>
+        <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
@@ -23,6 +20,7 @@
     <br>
     <main>
         <p><strong>Email:</strong> contato@sulfibra.com.br</p>
+        <p><strong>Whatsapp:</strong> <s>+55 12 98108 4911</s></p>
     </main>
     <br>
     <footer>
