--- a/produtos.html
+++ b/produtos.html
@@ -11,10 +11,7 @@
     <nav>
         <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html">Home</a>
-        <a href="inicio.html">Inicio</a>
-        <a href="solucao.html">Solução do Problema</a>
-        <a href="valor.html">Valor Agregado</a>
-        <a href="patentes.html">Patentes</a>
+        <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html" class="atual">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
@@ -24,15 +21,15 @@
     <main>
         <div class="produtoA">
             <ul>
-                <li><a href="pdf/arquivos/F.pdf" target="frame">Blocos</a></li>
-                <li>Esquadrias</li>
+                <li><a href="pdf/produtos/teste.pdf" target="frame">Blocos</a></li>
+                <li><a href="video/00_MVP_Site_2025_001.mp4" target="frame">Esquadrias</a></li>
                 <li>Graute</li>
                 <li>Bombas para injeção de graute</li>
                 <li>Dispositivos auxiliares</li>
             </ul>
         </div>
-        <div class="produtoB" scolling="yes" sandbox="sandbox" referrerpolicy="no-referrer">
-            <iframe src="pdf/index.html" frameborder="0" name="frame">Seu navegador não é compativel.</iframe>
+        <div class="produtoB">
+            <iframe src="pdf/index.html" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
     </main>
     <br>
