--- a/sobre.html
+++ b/sobre.html
@@ -11,10 +11,7 @@
     <nav>
         <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html">Home</a>
-        <a href="inicio.html">Inicio</a>
-        <a href="solucao.html">Solução do Problema</a>
-        <a href="valor.html">Valor Agregado</a>
-        <a href="patentes.html">Patentes</a>
+        <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html" class="atual">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
@@ -22,10 +19,10 @@
     </nav>
     <br>
     <main>
-        <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia.</p>
+        <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
         <p>Soluções simples, rápidas, práticas e patenteável, sem nenhuma concorrência.</p>
-        <p>Industrializando a construção de alvenaria, caracterizada pelo processo trabalhoso, fazendo da montagem obra um <strong>lego</strong>.</p>
-        <p>Introduzindo a alvenaria modular em nível dos menores elementos e escalando a construção civil no mundo.</p>
+        <p>Industrializando a construção de alvenaria, caracterizada pelo processo trabalhoso, fazendo da montagem obra um lego.</p>
+        <p>Introduzindo a construção modular em nível dos menores elementos e escalando a construção civil no mundo.</p>
         <p>Garantia vitalícia.</p>
         <p>Construindo o futuro sem entulhos.</p>
     </main>
