Testando um formato diferente de vídeo

--- a/home.html
+++ b/home.html
@@ -30,10 +30,11 @@
                 <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
             </video>
         </div>-->
-    <main>
+        <iframe src="video/00_Ads_Site_2025_001.mp4" frameborder="0" class="vidinicio"></iframe>
+    <main><!-- 
         <video autoplay loop muted controls class="vid">
             <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
-        </video>
+        </video>-->
         <h2>O lego da construção modular em nível dos menores elementos.</h2>
     </main>
 </body>
