--- a/home.html
+++ b/home.html
@@ -24,17 +24,13 @@
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
-    </nav><!-- 
+    </nav> 
         <div class="vid">
             <video autoplay loop muted controls>
                 <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
             </video>
-        </div>-->
-        <iframe src="video/00_Ads_Site_2025_001.mp4" frameborder="0" class="vidinicio"></iframe>
-    <main><!-- 
-        <video autoplay loop muted controls class="vid">
-            <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
-        </video>-->
+        </div>
+    <main>
         <h2>O lego da construção modular em nível dos menores elementos.</h2>
     </main>
 </body>
