Atualização do CSS por requerimento de correções

--- a/home.html
+++ b/home.html
@@ -27,11 +27,8 @@
     </nav> 
         <div class="vid">
             <video autoplay loop muted controls>
-                <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
+                <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
             </video>
         </div>
-    <main>
-        <h2>O lego da construção modular em nível dos menores elementos.</h2>
-    </main>
 </body>
 </html>
