--- a/sistema.html
+++ b/sistema.html
@@ -21,22 +21,20 @@
     <main>
         <h1>Introdução</h1>
         <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 5 novos conceitos de construção:</p>
-        <ul>
-            <li>Construção modular em nível dos menores elementos:
-                <ol>
-                    <li>Blocos modulares para paredes;</li>
-                    <li>Blocos modulares para pilares (fora das paredes);</li>
-                    <li>Blocos modulares para vigas;</li>
-                    <li>Portas modulares;</li>
-                    <li>Janelas modulares;</li>
-                    <li>Quadros modulares e qualquer outro objeto a ser chumbado na parede;</li>
-                </ol></li>
+        <ol>
+            <li>Construção modular em nível dos menores elementos:<pre>
+        A. Blocos modulares para paredes;
+        B. Blocos modulares para pilares (fora das paredes);
+        C. Blocos modulares para vigas;
+        D. Portas modulares;
+        E. Janelas modulares;
+        F. Quadros modulares e qualquer outro objeto a ser chumbado na parede;</pre></li>
             <p><strong>Obs.: </strong>Todos os elementos são manuseáveis.</p>
             <li>Sistema de pré-montagem à seco sem nenhum tipo de encaixe, somente por sobreposição e justaposição, permitindo nivelamento, alinhamento e prumo.</li>
             <li>Sistema de grauteamento através da injeção de material aderente somente nas juntas de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja, leve e sem desperdício de material de grauteamento.</li>
-            <li>Blocos com acabamento final direto da fábrica, compreendendo impermeabilização, pintura, revestimento, rodapé, caixinhas elétricas, etc.</li>
+            <li>Blocos com acabamento final direto da fábrica, compreendendo impermeabilização, pintura, revestimento, rodapé, caixinha elétrica, etc.</li>
             <li>Blocos com rasgos para passagem de armaduras, tubulações e conduítes, nas direções horizontais e verticais.</li>
-        </ul>
+        </ol>
         <p>Resumindo, MEGG é a abreviação de grupo de Elementos Modulares com meios para: ser pré-montado à seco; ser Grauteado em Grupo; ser montado com acabamento final na fábrica; ser preparado para a passagem de ferragens, tubulações e conduítes.</p>
         <h2>Para que serve?</h2>
         <p>Para a construção de paredes, pilares e vigas de alvenaria.</p>
@@ -61,7 +59,7 @@
             <li>Resolve as limitações de design e dimensões para fabricação em série dos módulos tradicionais;</li>
             <li>Resolve a dependência de fabricação e de montagem dos módulos tradicionais. Compre os MEGGs e projete e faça você mesmo, ou o seu arquiteto e o seu pedreiro.</li>
         </ol>
-        <p>Obs.: 1) Vide item F).</p>
+        <p><strong>Obs.: </strong>1. Vide pedidos de patente no item Patentes abaixo.</p>
 
 
         <h1>Solução do Problema</h1>
@@ -105,23 +103,28 @@
         <h1>Patentes</h1>
         <h2>Para os Blocos:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
-        <div class="produtoC">
-            <iframe src="pdf/patente/APznzabKLcCCgRPFvByMG0MCNbYaTPJfpNli4ziTX0jEG8Z1WJMBvH60QdMpReOGdTnTtEWC8xCBQCCd4949dCfO4ZeSPMijFdkZAYLdeFeED28LbHb-iBBkE17BKzUOaPb9QCLd3eFmYE5xzh-HVUT8AnmW6ogCdehoBdmndKl.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
+        <a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">Pedido de Patente</a>
+        <div class="arquivopdf">
+            <iframe src="pdf/patente/Pedido de Patente Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <div class="produtoC">
-            <iframe src="pdf/patente/APznzabkmOb43xBj7ixTqDo2uCbxCLRSxuU6K5smew_Ch2YHn8Zefyf5OrVoSEHh4Gay-hcvPvRnTWF0emKzxFUb_Va6NSB-wfHP86a-qU7PyFKxJuy-1EiB45JTkbk4bTkPq61Col53gS4BkrJqByhJtuc6rwNiME_l4RiDQ4jG4n4.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
+        <a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">Opinião Preliminar</a>
+        <div class="arquivopdf">
+            <iframe src="pdf/patente/Opiniao Preliminar Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
         <p>Internacional: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro internacional no WIPO/PCT sobre número WO-2022-099395-A1, com opinião preliminar sobre a patenteabilidade positiva.</p>
-        <div class="produtoC">
-            <iframe src="pdf/patente/APznzaa7vg-DJDI1a4k6Woq5Lg7FI9FrlNLnL5goZu3MZNaF9lzp7_mhwr0da7JI9k_b3wZPpOo_MusqJCtYfhYowHTUyUf3tBWBXX48BB4P89lxIlWUlKNFLAvcL9L3t3PfeV1cNvfQu0fne1FbQLTSonNwWxDfYQU4BE0D2FOrRiU.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
+        <a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">Pedido de Patente</a>
+        <div class="arquivopdf">
+            <iframe src="pdf/patente/Pedido de Patente Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <div class="produtoC">
-            <iframe src="pdf/patente/20220208 - opinião escrita.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
+        <a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">Opinião Preliminar</a>
+        <div class="arquivopdf">
+            <iframe src="pdf/patente/Opiniao Preliminar Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
         <h2>Para as Esquadrias:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
-        <div class="produtoD">
-            <iframe src="pdf/BR 10 2024 023671 8_Frames.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
+        <a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">Pedido de Patente</a>
+        <div class="arquivopdf">
+            <iframe src="pdf/patente/Pedido de Patente Frame.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
     </main>
 </body>
