--- a/sistema.html
+++ b/sistema.html
@@ -76,7 +76,7 @@
         <ol>
             <li>Assentamento tradicional trabalhoso dos blocos com argamassa;</li>
             <li><a href="#">Execução trabalhosa das caixarias para vigas e pilares, principalmente os pilares não embutidos na parede;</a></li>
-            <li><a href="#">Execução trabalhosa de rasgos nos blocos para passagem das armaduras horizontais e verticais; [Link]</a></li>
+            <li><a href="#">Execução trabalhosa de rasgos nos blocos para passagem das armaduras horizontais e verticais;</a></li>
             <li>Processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
             <li>Execução trabalhosa do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes;</li>
             <li>Vida útil pequena do reboco e da pintura das paredes;</li>
@@ -97,7 +97,7 @@
         <ul>
             <li>Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos perecíveis, mão de obra, recursos, entulho, desperdícios, etc.;</li>
             <li>Melhoria dos aspectos de produtividade, de qualidade, humano e ambiental;</li>
-            <li>Aumento da vida útil das paredes (garantia vitalícia);</li>
+            <li>Aumento da vida útil das paredes &#40;garantia vitalícia&#41;;</li>
             <li>Redução de custos e do lead time da construção, e consequentemente, entrega de mais obras, aumento do faturamento e do lucro;</li>
         </ul>
         <h2>Para os fabricantes de blocos:</h2>
@@ -116,6 +116,7 @@
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
+        <p></p>
         <a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">Opinião Preliminar</a>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
@@ -125,6 +126,7 @@
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
+        <p></p>
         <a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">Opinião Preliminar</a>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
