Mudança no link dos PDFs

--- a/sistema.html
+++ b/sistema.html
@@ -112,28 +112,26 @@
         <h1>Patentes</h1>
         <h2>Para os Blocos:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
-        <a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">Pedido de Patente</a>
+        <h2>Pedido de Patente no Brasil <a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">ver PDF</a></h2>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <p></p>
-        <a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">Opinião Preliminar</a>
+        <h2>Opinião Preliminar no Brasil <a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">ver PDF</a></h2>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
         <p>Internacional: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro internacional no WIPO/PCT sobre número WO-2022-099395-A1, com opinião preliminar sobre a patenteabilidade positiva.</p>
-        <a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">Pedido de Patente</a>
+        <h2>Pedido de Patente Internacional <a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">ver PDF</a></h2>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <p></p>
-        <a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">Opinião Preliminar</a>
+        <h2>Opinião Preliminar Internacional <a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">ver PDF</a></h2>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
         <h2>Para as Esquadrias:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
-        <a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">Pedido de Patente</a>
+        <h2>Pedido de Patente dos Frames <a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">ver PDF</a></h2>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Frame.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
