Novo CSS para os link de PDF

--- a/sistema.html
+++ b/sistema.html
@@ -24,7 +24,7 @@
         <ol>
             <li>Construção modular em nível dos menores elementos:<pre>
         A. Blocos modulares para paredes;
-        B. Blocos modulares para pilares (fora das paredes);
+        B. Blocos modulares para pilares &#40;fora das paredes&#41;;
         C. Blocos modulares para vigas;
         D. Portas modulares;
         E. Janelas modulares;
@@ -46,7 +46,7 @@
             <li>Sistema patenteado de produto;</li>
             <li>Sistema patenteado de processo de montagem;</li>
             <li>Sistema patenteado de processo de fabricação;</li>
-            <li>Design modular M200 (mm), permitindo a execução de construções de todas dimensões múltiplas de 20 cm;</li>
+            <li>Design modular M200 &#40;mm&#41;, permitindo a execução de construções de todas dimensões múltiplas de 20 cm;</li>
             <li>Design projetado com meios para serem aderidos em grupo;</li>
             <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
             <li>Sistema completo, compreendendo todos os tipos de blocos, portas, janelas, quadros e qualquer outro objeto necessário para a parede de uma edificação;</li>
@@ -112,26 +112,26 @@
         <h1>Patentes</h1>
         <h2>Para os Blocos:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
-        <h2>Pedido de Patente no Brasil <a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">ver PDF</a></h2>
+        <h3>Pedido de Patente no Brasil <a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">ver PDF</a></h3>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <h2>Opinião Preliminar no Brasil <a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">ver PDF</a></h2>
+        <h3>Opinião Preliminar no Brasil <a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">ver PDF</a></h3>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
         <p>Internacional: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro internacional no WIPO/PCT sobre número WO-2022-099395-A1, com opinião preliminar sobre a patenteabilidade positiva.</p>
-        <h2>Pedido de Patente Internacional <a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">ver PDF</a></h2>
+        <h3>Pedido de Patente Internacional <a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">ver PDF</a></h3>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <h2>Opinião Preliminar Internacional <a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">ver PDF</a></h2>
+        <h3>Opinião Preliminar Internacional <a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">ver PDF</a></h3>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
         <h2>Para as Esquadrias:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
-        <h2>Pedido de Patente dos Frames <a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">ver PDF</a></h2>
+        <h3>Pedido de Patente dos Frames <a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">ver PDF</a></h3>
         <div class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Frame.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
