--- a/sistema.html
+++ b/sistema.html
@@ -22,13 +22,13 @@
         <h1>Introdução</h1>
         <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 5 novos conceitos de construção:</p>
         <ol>
-            <li>Construção modular em nível dos menores elementos:<pre>
-        A. Blocos modulares para paredes;
-        B. Blocos modulares para pilares &#40;fora das paredes&#41;;
-        C. Blocos modulares para vigas;
-        D. Portas modulares;
-        E. Janelas modulares;
-        F. Quadros modulares e qualquer outro objeto a ser chumbado na parede;</pre></li>
+            <li>Construção modular em nível dos menores elementos:
+                <pre>       A. Blocos modulares para paredes;
+            B. Blocos modulares para pilares &#40;fora das paredes&#41;;
+            C. Blocos modulares para vigas;
+            D. Portas modulares;
+            E. Janelas modulares;
+            F. Quadros modulares e qualquer outro objeto a ser chumbado na parede;</pre></li>
             <p><strong>Obs.: </strong>Todos os elementos são manuseáveis.</p>
             <li>Sistema de pré-montagem à seco sem nenhum tipo de encaixe, somente por sobreposição e justaposição, permitindo nivelamento, alinhamento e prumo.</li>
             <li>Sistema de grauteamento através da injeção de material aderente somente nas juntas de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja, leve e sem desperdício de material de grauteamento.</li>
