pequenas alterações no CSS

--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,11 @@
     <title>wOrmhOle/Produtos</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
+    <style>
+        li{
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
     <nav>
