CSS de impressão

--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wOrmhOle</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/style.css" media="screen">
+    <link rel="stylesheet" href="estilo/print.css" media="print">
     <style>
         body{
             background-color: white;
