--- a/sistema.html
+++ b/sistema.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wOrmhOle</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/style.css" media="screen">
+    <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
 <body>
     <nav>
@@ -23,12 +24,12 @@
         <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 5 novos conceitos de construção:</p>
         <ol>
             <li>Construção modular em nível dos menores elementos:<br>
-                A. Blocos modulares para paredes;<br>
-                B. Blocos modulares para pilares &#40;fora das paredes&#41;;<br>
-                C. Blocos modulares para vigas;<br>
-                D. Portas modulares;<br>
-                E. Janelas modulares;<br>
-                F. Quadros modulares e qualquer outro objeto a ser chumbado na parede;
+                <strong>A.</strong> Blocos modulares para paredes;<br>
+                <strong>B.</strong> Blocos modulares para pilares &#40;fora das paredes&#41;;<br>
+                <strong>C.</strong> Blocos modulares para vigas;<br>
+                <strong>D.</strong> Portas modulares;<br>
+                <strong>E.</strong> Janelas modulares;<br>
+                <strong>F.</strong> Quadros modulares e qualquer outro objeto a ser chumbado na parede;
             </li>
             <p><strong>Obs.: </strong>Todos os elementos são manuseáveis.</p>
             <li>Sistema de pré-montagem à seco sem nenhum tipo de encaixe, somente por sobreposição e justaposição, permitindo nivelamento, alinhamento e prumo.</li>
