--- a/produtos.html
+++ b/produtos.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wOrmhOle/Produtos</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="estilo/style.css">
-    <style>
-        li{
-            display: inline-block;
-        }
-    </style>
+    <link rel="stylesheet" href="estilo/style.css" media="screen">
+    <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
 <body>
     <nav>
