--- a/fale.html
+++ b/fale.html
@@ -7,10 +7,12 @@
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 <body>
-    <nav>
-        <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+    <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+    <nav id="itens">
+        <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
         <a href="home.html">Home</a>
         <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
@@ -23,5 +25,21 @@
         <p><strong>Email:</strong> contato@sulfibra.com.br</p>
         <p><strong>Whatsapp:</strong> <s>+55 12 98108 4911</s></p>
     </main>
+
+
+    <script>
+        function clickMenu(){
+            if(burger.style.display=='block'){
+                itens.style.display='none'
+                burger.style.backgroundColor='white'
+                burger.style.color='darkred'
+            }
+            else{
+                itens.style.display='block'
+                burger.style.backgroundColor='darkred'
+                burger.style.color='white'
+            }
+        }
+    </script>
 </body>
 </html>
