--- a/fale.html
+++ b/fale.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="estilo/print.css" media="print">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
     <nav id="itens">
-        <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+        <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html">Home</a>
         <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
@@ -26,7 +26,6 @@
         <p><strong>Whatsapp:</strong> <s>+55 12 98108 4911</s></p>
     </main>
 
-
     <script>
         function clickMenu(){
             if(burger.style.display=='block'){
@@ -38,6 +37,14 @@
                 itens.style.display='block'
                 burger.style.backgroundColor='darkred'
                 burger.style.color='white'
+            }
+        }
+        function mudouTamanho(){
+            if(window.innerWidth>=769){
+                itens.style.display='flex'
+            }
+            else{
+                itens.style.display='none'
             }
         }
     </script>
