--- a/home.html
+++ b/home.html
@@ -15,10 +15,12 @@
             background-color: white;
         }
     </style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
-<body>
-    <nav>
-        <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+<body onresize="mudouTamanho()">
+    <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+    <nav id="itens">
+        <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html" class="atual">Home</a>
         <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
@@ -26,10 +28,33 @@
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
     </nav> 
-        <div class="vid">
-            <video autoplay loop muted controls>
-                <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
-            </video>
-        </div>
+    <div class="vid">
+        <video autoplay loop muted controls>
+            <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <script>
+        function clickMenu(){
+            if(burger.style.display=='block'){
+                itens.style.display='none'
+                burger.style.backgroundColor='white'
+                burger.style.color='darkred'
+            }
+            else{
+                itens.style.display='block'
+                burger.style.backgroundColor='darkred'
+                burger.style.color='white'
+            }
+        }
+        function mudouTamanho(){
+            if(window.innerWidth>=769){
+                itens.style.display='flex'
+            }
+            else{
+                itens.style.display='none'
+            }
+        }
+    </script>
 </body>
 </html>
