--- a/sistema.html
+++ b/sistema.html
@@ -7,10 +7,12 @@
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
-<body>
-    <nav>
-        <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+<body onresize="mudouTamanho()">
+    <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+    <nav id="itens">
+        <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html">Home</a>
         <a href="sistema.html" class="atual">MEGG wOrmhOle System</a>
         <a href="sobre.html">Sobre Nós</a>
@@ -138,5 +140,28 @@
             <iframe src="pdf/patente/Pedido de Patente Frame.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
     </main>
+
+    <script>
+        function clickMenu(){
+            if(burger.style.display=='block'){
+                itens.style.display='none'
+                burger.style.backgroundColor='white'
+                burger.style.color='darkred'
+            }
+            else{
+                itens.style.display='block'
+                burger.style.backgroundColor='darkred'
+                burger.style.color='white'
+            }
+        }
+        function mudouTamanho(){
+            if(window.innerWidth>=769){
+                itens.style.display='flex'
+            }
+            else{
+                itens.style.display='none'
+            }
+        }
+    </script>
 </body>
 </html>
