--- a/sobre.html
+++ b/sobre.html
@@ -7,10 +7,12 @@
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
-<body>
-    <nav>
-        <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+<body onresize="mudouTamanho()">
+    <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+    <nav id="itens">
+        <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html">Home</a>
         <a href="sistema.html">MEGG wOrmhOle System</a>
         <a href="sobre.html" class="atual">Sobre Nós</a>
@@ -27,5 +29,28 @@
         <p>Garantia vitalícia.</p>
         <p>Construindo o futuro sem entulhos.</p>
     </main>
+
+    <script>
+        function clickMenu(){
+            if(burger.style.display=='block'){
+                itens.style.display='none'
+                burger.style.backgroundColor='white'
+                burger.style.color='darkred'
+            }
+            else{
+                itens.style.display='block'
+                burger.style.backgroundColor='darkred'
+                burger.style.color='white'
+            }
+        }
+        function mudouTamanho(){
+            if(window.innerWidth>=769){
+                itens.style.display='flex'
+            }
+            else{
+                itens.style.display='none'
+            }
+        }
+    </script>
 </body>
 </html>
