--- a/fale.html
+++ b/fale.html
@@ -10,16 +10,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 <body onresize="mudouTamanho()">
-    <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-    <nav id="itens">
-        <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
-        <a href="home.html">Home</a>
-        <a href="sistema.html">MEGG wOrmhOle System</a>
-        <a href="sobre.html">Sobre Nós</a>
-        <a href="produtos.html">Produtos</a>
-        <a href="parceiros.html">Parceiros & Investidores</a>
-        <a href="fale.html" class="atual">Fale Conosco</a>
-    </nav>
+    <header>
+        <div class="image2"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></div>
+        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <nav id="itens">
+            <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+            <a href="home.html">Home</a>
+            <a href="sistema.html">MEGG wOrmhOle System</a>
+            <a href="sobre.html">Sobre Nós</a>
+            <a href="produtos.html">Produtos</a>
+            <a href="parceiros.html">Parceiros & Investidores</a>
+            <a href="fale.html" class="atual">Fale Conosco</a>
+        </nav>
+    </header>
     <br>
     <main>
         <p><strong>Email:</strong> contato@sulfibra.com.br</p>
